--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -28,7 +28,7 @@ header {
 
 .menu-links li {
     margin: 0 10px;
-    font-size: 20px;
+    font-size: 25px;
 }
 
 .menu-links a {
@@ -56,7 +56,7 @@ nav ul li a:focus {
 
 .social-icons li {
     margin: 0 15px;
-    font-size: 25px;
+    font-size: 30px;
 }
 
 .social-icons a {
@@ -65,7 +65,7 @@ nav ul li a:focus {
 }
 
 /*Pie de Pagina*/
-/*footer {
+footer {
     background: #333;
     color: #fff;
     text-align: center;
@@ -73,7 +73,7 @@ nav ul li a:focus {
     position: fixed;
     bottom: 0;
     width: 100%;
-}*/
+}
 
 
 
