--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -3,12 +3,12 @@ body {
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
-  }
+}
 
-  /*Menu*/
+/*Menu*/
 header {
-    background: rgba(0, 0, 0, 0.8);
-    padding: 15px;
+    background: rgba(0, 0, 0, 0.9);
+    padding: 10px;
 }
 
 /*Indicadores*/
@@ -64,9 +64,62 @@ nav ul li a:focus {
     color: white;
 }
 
+/*Contenido de Perfil*/
+.container-profile {
+    background-image: url("/Styles/images/customer03.jpg");
+    background-repeat: no-repeat; /* Evita que la imagen se repita */
+    background-size: cover; /* Cubre completamente el contenedor */
+    position: fixed;
+    width: 100%;
+    height: 90%;
+    color: white;
+    padding: 40px;
+    text-align: left;
+    font-size: 25px;
+}
+
+h1.title-profile,
+h3.title-profile {
+    margin: 0; /* Elimina el margen por defecto para h1 y h3 */
+    margin-left: 50px;
+}
+
+h1.title-profile + h3.title-profile {
+    margin-top: 5px; /* Agrega un espacio de 5px entre h1 y h3 */
+    margin-left: auto;
+}
+
+p.title-profile {
+    margin-top: 5px; /* Agrega un espacio de 5px arriba para el párrafo */
+    margin-left: 50px; /* Posiciona el párrafo 100px a la derecha */
+}
+
+/*Botones*/
+.buttons {
+    position: fixed; /* Posición absoluta para los botones */
+    bottom: 250px; /* Ajusta la posición desde la parte inferior */
+    left: 200px; /* Centra horizontalmente los botones */
+    transform: translateX(-50%); /* Centra horizontalmente los botones respecto al contenedor */
+}
+
+.rounded-btn {
+    padding: 10px 20px; /* Ajusta el espacio dentro del botón */
+    border: 2px solid transparent; /* Borde transparente inicial */
+    border-radius: 20px; /* Bordes redondeados */
+    margin: 10px; /* Espacio entre botones */
+    font-size: 16px;
+    cursor: pointer;
+}
+
+/* Estilos al pasar el ratón por encima */
+.rounded-btn:hover {
+    border-color: #54849c; /* Cambia el color del borde al pasar el ratón por encima */
+    transition: border-color 0.3s ease; /* Agrega una transición suave al cambio de color del borde */
+}
+
 /*Pie de Pagina*/
 footer {
-    background: #333;
+    background: rgba(51, 51, 51, 0);
     color: #fff;
     text-align: center;
     padding: 1px;
